--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://github.com/LeetaoGoooo/leetaogoooo.github.io.git
+url: https://leetaogoooo.github.io.git
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
