--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -399,7 +399,7 @@ bookmark:
 # `Follow me on GitHub` banner in the top-right corner.
 github_banner:
   enable: false
-  permalink: https://github.com/yourname
+  permalink: https://github.com/leetaogoooo
   title: Follow me on GitHub
 
 
