--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -228,6 +228,7 @@ footer:
 # Automatically excerpt description in homepage as preamble text.
 excerpt_description: true
 
+
 # Read more button
 # If true, the read more button will be displayed in excerpt section.
 read_more_btn: true
@@ -288,7 +289,7 @@ related_posts:
 # Post edit
 # Easily browse and edit blog source code online.
 post_edit:
-  enable: false
+  enable: true
   # url: https://github.com/LeetaoGoooo/leetaogoooo.github.io/tree/branch-name/subdirectory-name/ # Link for view source
   #url: https://github.com/user-name/repo-name/edit/branch-name/subdirectory-name/ # Link for fork & edit
 
