--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -228,6 +228,9 @@ footer:
 # Automatically excerpt description in homepage as preamble text.
 excerpt_description: true
 
+auto_excerpt:
+  enable: true
+  length: 150
 
 # Read more button
 # If true, the read more button will be displayed in excerpt section.
