--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -625,7 +625,7 @@ gitalk:
   repo: leetaogoooo.github.io # Repository name to store issues
   client_id: bf98ffa3f57b2591544e # GitHub Application Client ID
   client_secret: cc5ffeff8863bb5c44ed10f024513dccfac14afa # GitHub Application Client Secret
-  admin_user: # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
+  admin_user: leetaogoooo # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
   distraction_free_mode: true # Facebook-like distraction free mode
   # When the official proxy is not available, you can change it to your own proxy address
   proxy: https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token # This is official proxy address
