--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -143,7 +143,7 @@ site_state: true
 social:
   GitHub: https://github.com/leetaogoooo || fab fa-github
   E-Mail: mailto:leetao94cn@gmail.com || fa fa-envelope
-  Zhihu: https://weibo.com/yourname || fab fa-zhihu
+  Zhihu: https://www.zhihu.com/people/LeetaoGoooo || fab fa-zhihu
   #Google: https://plus.google.com/yourname || fab fa-google
   Twitter: https://twitter.com/leetaoGoooo || fab fa-twitter
   RSS: /atom.xml || fa fa-rss
