--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -144,6 +144,7 @@ social:
   GitHub: https://github.com/leetaogoooo || fab fa-github
   E-Mail: mailto:leetao94cn@gmail.com || fa fa-envelope
   Zhihu: https://www.zhihu.com/people/LeetaoGoooo || fab fa-zhihu
+  Telegram: https://t.me/leetaothinks | fa fa-telegram
   #Google: https://plus.google.com/yourname || fab fa-google
   Twitter: https://twitter.com/leetaoGoooo || fab fa-twitter
   RSS: /atom.xml || fa fa-rss
